name:               robwhitaker-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.7 && < 5
                  , hakyll >= 4.7 && < 8
                  , filepath >= 1.3 && < 2
                  , regex-compat < 1
                  , containers >= 0.5.5.1 && < 0.5.5.2
  ghc-options:      -threaded
  default-language: Haskell2010
