name:               robwhitaker-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , filepath
                  , regex-compat
  ghc-options:      -threaded
  default-language: Haskell2010
